# bm3d-gpu

./: Bm3dGpu.cpp  Bm3dGpu.h  CMakeLists.txt  demo.cpp
